# AudioVideoCode

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yougu/audiopcm/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/zzs/media/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-mine.cpp
app/src/main/java/com/yougu/audiopcm/: FileUtils.java  MainActivity.java  MusicProcess.java  PcmToWavUtil.java  VideoProcess.java
app/src/main/java/com/zzs/media/: Extension.kt  MainActivity.kt
app/src/main/java/com/zzs/media/base/: BasicCompose.kt
app/src/main/java/com/zzs/media/bluetooth/: BleClientActivity.kt  BleDevice.kt  BleServerActivity.kt  BluetoothKit.kt
app/src/main/java/com/zzs/media/cameraX/: CameraRenderView.kt  CameraXRecordActivity.kt
app/src/main/java/com/zzs/media/cameraX/opengles/: BaseFBOOpenGL.java  BaseOpenGL.java  CameraFBOOpenGL.java  CameraOpenGL.java  EGLEnvHelper.java  OpenGLKit.java  OpenGLPreviewView.java  PreviewRender.java
app/src/main/java/com/zzs/media/ffmpegplayer/: FFmpegPlayerActivity.kt
app/src/main/java/com/zzs/media/muxer/: FileUtils.java  MusicProcess.java  MuxerMediaActivity.java  PcmToWavUtil.java  VideoProcess.java
app/src/main/java/com/zzs/media/record2aac/: RecordToAACActivity.kt
app/src/main/java/com/zzs/media/simpleplayer/: DecodeCallBack.kt  IPlayerListener.kt  SimpleMp4Player.kt  SimpleMp4Player2.kt  SimplePlayerActivity.kt
app/src/main/java/com/zzs/media/simpleplayer/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_camerax_record.xml  activity_main.xml  activity_muxer_media.xml  activity_record_2_aac.xml  layout_loading.xml
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v28/: styles.xml
app/src/test/java/com/yougu/audiopcm/: ExampleUnitTest.java
app/src/test/java/com/zzs/media/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
